    * FIX: fix inheritation of contactgroups from folder to hosts

    BI:
    * FIX: Correct representation of (!), (!!) and (?) markers in check output

    Livestatus
    * FIX: comments_with_info in service table was always empty
    
    Livecheck
    * FIX: fixed problem with long plugin output
    * FIX: added /0 termination to strings
    * FIX: changed check_type to be always active (0)

    Checks & Agents:
    * FIX: Linux mk_logwatch: iregex Parameter was never used
    * FIX: Windows agent: quote '%' in plugin output correctly
    * FIX: multipath check now handles '-' in "user friendly names"
    * New check mssql_counters.locks: Monitors locking related information of
      MSSQL tablespaces
    * FIX: mssql_counters checks now really only inventorize percentage based
      counters if a base value is set
    * windows_updates agent plugin: Fetching data in background mode, caching
      update information for 30 minutes
    * FIX: netapp_vfiler: fix inventory function (thanks to Falk Krentzlin)
    * FIX: ps: avoid exception, when CPU% is missing (Zombies on Solaris)

1.2.1i1:
    Core:
    * Allow to add options to rules. Currently the options "disabled" and
      "comment" are allowed. Options are kept in an optional dict at the
      end of each rule.
    * parent scan: skip gateways that are reachable via PING
    * Allow subcheck to be in a separate file (e.g. foo.bar)
    * Contacts can now define *_notification_commands attributes which can now
      override the default notification command check-mk-notify
    * SNMP scan: fixed case where = was contained in SNMP info
    * check_imap_folder: new active check for searching for certain subjects
      in an IMAP folder
    * cmk -D shows multiple agent types e.g. when using SNMP and TCP on one host

    Checks & Agents:
    * New Checks for Siemens Blades (BX600)
    * New Checks for Fortigate Firewalls
    * Netapp Checks for CPU Util an FC Port throughput